MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.5 beta
* bug #955111	RestoreState of outputText with mixed ValueBinding attribute

----------------------------------------------------------------------
Changes in Release 1.0.4 beta

IMPORTANT NOTE: because of fix for bug #952453 the context parameter
javax.faces.application.CONFIG_FILES was changed to the spec-compliant
javax.faces.CONFIG_FILES. You have to modify your web.xml accordingly,
otherwise your config files will no longer be found and parsed.

* new renderedIfEmpty attribute for extended <x:dataTable> component (see tlddocs)
* new validators (creditcard, email)
* bug #961241	Checkbox in dataTable problem
* bug #960581	<x:panelTabbedPane selectedIndex
* bug #959926	<h:selectOneRadio and styleClass
* bug #953783	h:commandLink renders value as text
* bug #955135	graphicImage tag
* bug #952453	Class FacesConfigFactoryBase search for wrong context-param
* bug #951988	myfaces doesn't read faces-config.xml in foo.jars
* bug #951896	command links broken if ALLOW_JAVASCRIPT=false
* bug #948629	UpdateActionListener looking for String -> Object converter
* bug #948626	hiddenInput does not decode and store value
* bug #948110	h:selectManyCheckbox styleClass handling
* bug #943587	<h:commandLink> does not recognize target attribute.
* bug #943166	Managed bean properties cannot use native data types?
* many bugfixes ;-)

----------------------------------------------------------------------
Changes in Release 1.0.3 alpha
* commandLink javascript error bug fixed
* bug #943210 ("outputLink produces very long URLs that don't work") fixed
* bug #945118 ("Checkbox session state") fixed

----------------------------------------------------------------------
Changes in Release 1.0.2 alpha
* refactored custom components to net.sourceforge.myfaces.custom package