@@ -37,6 +37,9 @@ import java.io.IOException;
  * @author Anton Koinov
  * @version $Revision$ $Date$
  * $Log$
+ * Revision 1.3  2004/06/04 00:26:16  o_rossmueller
+ * modified renderes to comply with JSF 1.1
+ *
  * Revision 1.2  2004/05/26 11:10:12  o_rossmueller
  * fix #959926: styleClass support for selectOneRadio, selectOneList, selectManyList
  *
@@ -51,7 +54,6 @@ public class HtmlListboxRendererBase
             throws IOException
     {
         RendererUtils.checkParamValidity(facesContext, uiComponent, null);
-        String styleClass;
 
         if (uiComponent instanceof UISelectMany)
         {
@@ -59,28 +61,16 @@ public class HtmlListboxRendererBase
             if (uiComponent instanceof HtmlSelectManyListbox)
             {
                 size = ((HtmlSelectManyListbox)uiComponent).getSize();
-                styleClass = ((HtmlSelectManyListbox)uiComponent).getStyleClass();
             }
             else
             {
                 Integer i = (Integer)uiComponent.getAttributes().get(JSFAttr.SIZE_ATTR);
                 size = i != null ? i.intValue() : 0;
-                styleClass = (String)uiComponent.getAttributes().get(JSFAttr.STYLE_CLASS_ATTR);
-            }
-            ResponseWriter writer = facesContext.getResponseWriter();
-
-            if (styleClass != null && styleClass.length() > 0) {
-
-                writer.startElement(HTML.SPAN_ELEM, uiComponent);
-                writer.writeAttribute(HTML.CLASS_ATTR, styleClass, null);
             }
             HtmlRendererUtils.renderListbox(facesContext,
                                             (UISelectMany)uiComponent,
                                             isDisabled(facesContext, uiComponent),
                                             size);
-            if (styleClass != null && styleClass.length() > 0) {
-                writer.endElement(HTML.SPAN_ELEM);
-            }
         }
         else if (uiComponent instanceof HtmlSelectOneListbox)
         {
@@ -88,28 +78,16 @@ public class HtmlListboxRendererBase
             if (uiComponent instanceof HtmlSelectOneListbox)
             {
                 size = ((HtmlSelectOneListbox)uiComponent).getSize();
-                styleClass = ((HtmlSelectOneListbox)uiComponent).getStyleClass();
             }
             else
             {
                 Integer i = (Integer)uiComponent.getAttributes().get(JSFAttr.SIZE_ATTR);
                 size = i != null ? i.intValue() : 0;
-                styleClass = (String)uiComponent.getAttributes().get(JSFAttr.STYLE_CLASS_ATTR);
-            }
-            ResponseWriter writer = facesContext.getResponseWriter();
-
-            if (styleClass != null && styleClass.length() > 0) {
-
-                writer.startElement(HTML.SPAN_ELEM, uiComponent);
-                writer.writeAttribute(HTML.CLASS_ATTR, styleClass, null);
             }
             HtmlRendererUtils.renderListbox(facesContext,
                                             (UISelectOne)uiComponent,
                                             isDisabled(facesContext, uiComponent),
                                             size);
-            if (styleClass != null && styleClass.length() > 0) {
-                writer.endElement(HTML.SPAN_ELEM);
-            }
         }
         else
         {
